force-app/main/default/objects/Freee_Config__mdt/Freee_Config__mdt.object-meta.xml
<CustomObject>
    <label>Freee設定情報</label>
</CustomObject>