force-app/main/default/objects/Freee_Config__mdt/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <label>payment_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>