force-app/main/default/objects/Freee_Config__mdt/fields/tax_entry_method__c.field-meta.xml
<CustomField>
    <fullName>tax_entry_method__c</fullName>
    <label>税額計算方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>