force-app/main/default/objects/Freee_Config__mdt/fields/tax_fraction__c.field-meta.xml
<CustomField>
    <fullName>tax_fraction__c</fullName>
    <label>tax_fraction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>