force-app/main/default/objects/Freee_Config__mdt/fields/template_id__c.field-meta.xml
<CustomField>
    <fullName>template_id__c</fullName>
    <label>template_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>