force-app/main/default/objects/Freee_Config__mdt/fields/withholding__c.field-meta.xml
<CustomField>
    <fullName>withholding__c</fullName>
    <label>源泉徴収</label>
    <length>255</length>
    <type>Text</type>
</CustomField>