force-app/main/default/objects/Freee_Config__mdt/fields/withholding_tax_entry_method__c.field-meta.xml
<CustomField>
    <fullName>withholding_tax_entry_method__c</fullName>
    <label>源泉徴収税額計算方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>